--- a/src/components/UI/Popup/Popup.css
+++ b/src/components/UI/Popup/Popup.css
@@ -12,7 +12,8 @@
   position: fixed;
   left: 10px;
   right: 10px;
-  top: 60px;
+  top: 30px;
+  bottom: 30px;
 
   border: 2px solid #5e348c;
   background-color: white;
