--- a/src/components/OrgFile/components/Header/components/HeaderActionDrawer/HeaderActionDrawer.css
+++ b/src/components/OrgFile/components/Header/components/HeaderActionDrawer/HeaderActionDrawer.css
@@ -1,14 +1,17 @@
 .header-action-drawer-container {
   color: lightgray;
 
+  padding-bottom: 10px;
+
+  padding-right: 20px;
+}
+
+.header-action-drawer__row {
   display: flex;
   align-items: center;
   justify-content: space-around;
 
   padding-top: 10px;
-  padding-bottom: 10px;
-
-  padding-right: 20px;
 }
 
 .header-action-drawer__separator {
@@ -19,4 +22,10 @@
 
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.header-action-drawer__deadline-scheduled-button {
+  text-transform: uppercase;
+  width: 90px;
+  text-align: center;
 }
