--- a/src/components/UI/SlideUp/stylesheet.css
+++ b/src/components/UI/SlideUp/stylesheet.css
@@ -13,8 +13,8 @@
 .slide-up-inner-container {
   position: fixed;
   bottom: -1px;
-  left: 0;
-  right: 0;
+  left: -1px;
+  right: -1px;
 
   padding: 15px 10px 0 10px;
 
@@ -26,7 +26,7 @@
   background-color: white;
 
   max-height: 80%;
-  overflow-y: auto;
+  overflow: auto;
 }
 
 .slide-up__close-button {
