--- a/src/components/OrgFile/components/Header/components/HeaderActionDrawer/stylesheet.css
+++ b/src/components/OrgFile/components/Header/components/HeaderActionDrawer/stylesheet.css
@@ -14,6 +14,19 @@
   padding-top: 10px;
 }
 
+.header-action-drawer__ff-click-catcher-container {
+  position: relative;
+}
+
+.header-action-drawer__ff-click-catcher {
+  height: 20px;
+  width: 20px;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .header-action-drawer__separator {
   background-color: lightgray;
 
