Basic display of headers in agenda

--- a/src/components/OrgFile/components/AgendaModal/components/AgendaDay/stylesheet.css
+++ b/src/components/OrgFile/components/AgendaModal/components/AgendaDay/stylesheet.css
@@ -1,7 +1,3 @@
-.agenda-day__container {
-
-}
-
 .agenda-day__title {
   color: #5e348c;
 
@@ -12,4 +8,28 @@
 
 .agenda-day__title__day-name {
   font-weight: bold;
+}
+
+.agenda-day__headers-container {
+  margin-top: 5px;
+  margin-left: 20px;
+}
+
+.agenda-day__header-container {
+  display: flex;
+
+  margin-bottom: 8px;
+}
+
+.agenda-day__header__header-container {
+  margin-top: 18px;
+}
+
+.agenda-day__header__planning-item-container {
+  font-family: Courier;
+}
+
+.agenda-day__header-planning-type {
+  min-width: 120px;
+  color: gray;
 }
