--- a/src/components/Settings/stylesheet.css
+++ b/src/components/Settings/stylesheet.css
@@ -7,6 +7,11 @@
   padding: 5px 0;
 }
 
+.setting-container--vertical-layout {
+  flex-direction: column;
+  align-items: flex-start;
+}
+
 .settings-container a {
   text-decoration: none;
 }
@@ -17,6 +22,10 @@
 
 .setting-label {
   max-width: calc(100% - 90px);
+}
+
+.setting-container--vertical-layout .setting-label {
+  margin-bottom: 5px;
 }
 
 .setting-label__description {
