--- a/src/components/UI/SlideUp/stylesheet.css
+++ b/src/components/UI/SlideUp/stylesheet.css
@@ -18,7 +18,7 @@
 
   padding: 15px 10px 0 10px;
 
-  border: 1px solid #5e348c;
+  box-shadow: 0px -1px 5px 0px rgba(148, 148, 148, 0.55);
   border-bottom: none;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
