--- a/src/components/CaptureTemplatesEditor/components/CaptureTemplate/stylesheet.css
+++ b/src/components/CaptureTemplatesEditor/components/CaptureTemplate/stylesheet.css
@@ -1,3 +1,5 @@
+@import '../../../../colors.css';
+
 .capture-template-container {
   border-bottom: 2px solid #5e348c;
   padding: 15px 5px;
@@ -81,7 +83,7 @@
   align-items: center;
   justify-content: center;
 
-  color: lightgray;
+  color: var(--base01);
   font-size: 14px;
 
   margin-bottom: 5px;
