--- a/src/components/OrgFile/components/TimestampEditorModal/components/TimestampEditor/stylesheet.css
+++ b/src/components/OrgFile/components/TimestampEditorModal/components/TimestampEditor/stylesheet.css
@@ -24,7 +24,7 @@
 .timestamp-editor__field-title {
   text-transform: uppercase;
   font-size: 12px;
-  color: #5E348C;
+  color: var(--magenta);
 
   margin-bottom: 5px;
 }
@@ -55,7 +55,7 @@
   padding-right: 12px;
   padding-left: 12px;
 
-  background-color: #5E348C;
+  background-color: var(--magenta);
   color: white;
 
   font-size: 14px;
@@ -65,7 +65,7 @@
 }
 
 .timestamp-editor__date-input, .timestamp-editor__time-input {
-  background-color: #5E348C;
+  background-color: var(--magenta);
   color: white;
 
   border: none;
@@ -79,7 +79,7 @@
 }
 
 .timestamp-editor__icon--remove {
-  color: #5E348C;
+  color: var(--magenta);
   margin-left: 15px;
 }
 
