--- a/src/components/KeyboardShortcutsEditor/components/ShortcutRow/stylesheet.css
+++ b/src/components/KeyboardShortcutsEditor/components/ShortcutRow/stylesheet.css
@@ -1,3 +1,5 @@
+@import '../../../../colors.css';
+
 .keyboard-shortcut-container {
   display: flex;
   align-items: center;
@@ -22,7 +24,7 @@
   align-items: center;
   justify-content: center;
 
-  color: #5e348c;
+  color: var(--base2);
   background-color: #f1f1f1;
   border: 1px solid gray;
   box-sizing: border-box;
@@ -31,6 +33,6 @@
 }
 
 .keyboard-shortcut-container__shortcut-key--edit-mode {
-  border: 2px solid #5e348c;
-  background-color: white;
+  border: 2px solid var(--base2);
+  background-color: var(--base00);
 }
