--- a/src/components/OrgFile/components/TimestampEditorModal/components/TimestampEditor/stylesheet.css
+++ b/src/components/OrgFile/components/TimestampEditorModal/components/TimestampEditor/stylesheet.css
@@ -1,6 +1,9 @@
+@import '../../../../../../colors.css';
+
 .timestamp-editor__render {
   font-family: Courier;
   font-size: 14px;
+  color: var(--base01);
 
   text-align: center;
 }
@@ -24,7 +27,7 @@
 .timestamp-editor__field-title {
   text-transform: uppercase;
   font-size: 12px;
-  color: var(--magenta);
+  color: var(--base01);
 
   margin-bottom: 5px;
 }
@@ -56,7 +59,7 @@
   padding-left: 12px;
 
   background-color: var(--magenta);
-  color: white;
+  color: #FFE;
 
   font-size: 14px;
 
@@ -66,7 +69,7 @@
 
 .timestamp-editor__date-input, .timestamp-editor__time-input {
   background-color: var(--magenta);
-  color: white;
+  color: #FFE;
 
   border: none;
   border-radius: 0;
