--- a/src/components/UI/Checkbox/stylesheet.css
+++ b/src/components/UI/Checkbox/stylesheet.css
@@ -1,16 +1,18 @@
+@import '../../../colors.css';
+
 .checkbox {
   height: 20px;
   width: 20px;
   vertical-align: middle;
   margin-right: 5px;
 
-  border: 2px solid #5e348c;
+  border: 2px solid var(--base2);
   border-radius: 2px;
   box-sizing: border-box;
 
   display: inline-block;
 
-  color: white;
+  color: var(--base00);
 }
 
 .checkbox__inner-container {
