--- a/src/components/Landing/stylesheet.css
+++ b/src/components/Landing/stylesheet.css
@@ -1,5 +1,19 @@
 @import '../../colors.css';
 
+footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: var(--base2);
+  text-align: center;
+}
+
+footer a {
+  color: var(--base00);
+}
+
 .landing-container {
   display: flex;
   flex-direction: column;
