--- a/src/base.css
+++ b/src/base.css
@@ -35,6 +35,7 @@ h2 {
 }
 
 .btn {
+  cursor: pointer;
   background-color: var(--magenta);
   /* TODO: What's the right way to have text on an action button in */
   /* solarized? */
