Ensure that 'privacy policy' button stays at bottom on LP

--- a/src/base.css
+++ b/src/base.css
@@ -24,10 +24,10 @@
   }
 }
 
-html, #root {
+html, body, #root {
   color: var(--base00);
   background: var(--base3);
-  min-height: 100vh;
+  height: 100%;
 }
 
 h2 {
