--- a/src/components/Entry/stylesheet.css
+++ b/src/components/Entry/stylesheet.css
@@ -1,5 +1,13 @@
+.App {
+  height: 100%;
+}
+
 .entry-container {
   font-size: 16px;
+
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 
   overflow-x: hidden;
 }
