--- a/src/components/Landing/stylesheet.css
+++ b/src/components/Landing/stylesheet.css
@@ -15,10 +15,17 @@ footer a {
   color: var(--base00);
 }
 
+.landing-container-wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
 .landing-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex: 1;
 }
 
 .landing-container a {
