--- a/src/components/OrgFile/components/TaskListModal/stylesheet.css
+++ b/src/components/OrgFile/components/TaskListModal/stylesheet.css
@@ -1,7 +1,7 @@
 /* Currently, the markup is the same as in the AgendaModal component.
  * Hence the CSS rules from there apply. */
 
-.agenda__filter-input {
+.task-list__filter-input {
   margin: 1em 0 1em 0;
   box-sizing: border-box;
   width: 100%;
