--- a/src/components/UI/Drawer/stylesheet.css
+++ b/src/components/UI/Drawer/stylesheet.css
@@ -15,12 +15,15 @@
 }
 
 .drawer-inner-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
   position: fixed;
   bottom: -1px;
   left: -1px;
   right: -1px;
 
-  padding: 15px 10px 0 10px;
+  padding: 15px 10px;
 
   box-shadow: 0px -1px 35px 0px var(--base03);
   border-bottom: none;
