--- a/src/components/OrgFile/components/TaskListModal/stylesheet.css
+++ b/src/components/OrgFile/components/TaskListModal/stylesheet.css
@@ -3,8 +3,7 @@
 /* Currently, the markup is the same as in the AgendaModal component.
  * Hence the CSS rules from there apply. */
 
-.task-list__filter-input,
-.task-list__filter-input-invalid {
+.task-list__filter-input {
   box-sizing: border-box;
   width: 100%;
 }
@@ -17,6 +16,6 @@
   flex-direction: column;
 }
 
-.task-list__filter-input-invalid {
+.task-list__filter-input--invalid {
   border: 2px solid var(--red);
 }
