chore: Juggle HeaderActionDrawer icons around

--- a/src/components/OrgFile/components/Header/components/HeaderActionDrawer/stylesheet.css
+++ b/src/components/OrgFile/components/Header/components/HeaderActionDrawer/stylesheet.css
@@ -10,8 +10,7 @@
 
 .header-action-drawer__row {
   display: flex;
-  align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 
   padding-top: 10px;
 }
