--- a/src/components/HeaderBar/stylesheet.css
+++ b/src/components/HeaderBar/stylesheet.css
@@ -6,8 +6,12 @@
   padding: 10px;
 
   display: grid;
-  grid-template-columns: 5fr 3fr 5fr;
+  grid-template-columns: 3fr 4fr 3fr;
   align-items: center;
+
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 .header-bar--with-logo {
@@ -33,6 +37,7 @@
   color: var(--base01);
   text-align: center;
   font-size: 20px;
+  height: 100%;
 }
 
 .header-bar__back-button {
