--- a/src/components/HeaderBar/stylesheet.css
+++ b/src/components/HeaderBar/stylesheet.css
@@ -6,7 +6,8 @@
   padding: 10px;
 
   display: grid;
-  grid-template-columns: 3fr 4fr 3fr;
+  grid-template-columns: minmax(2em, 2fr) minmax(1em, 3fr) 1fr;
+  grid-template-areas: 'back title actions';
   align-items: center;
 
   position: sticky;
@@ -38,6 +39,10 @@
   text-align: center;
   font-size: 20px;
   height: 100%;
+  grid-area: title;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  cursor: pointer;
 }
 
 .header-bar__back-button {
@@ -47,10 +52,11 @@
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+  grid-area: back;
 }
 
 .header-bar__back-button__directory-path {
-  margin-left: 5px;
+  margin-left: 0.25em;
 }
 
 .header-bar__actions {
@@ -60,12 +66,13 @@
   cursor: pointer;
 
   color: var(--base01);
+  grid-area: actions;
 }
 
 .header-bar__actions__item {
   color: var(--base01);
 
-  margin-left: 20px;
+  margin-left: 0.5em;
 }
 
 .settings-icon--has-unseen-changelog {
